src/test/ui/object-safety/object-safety-mentions-Self.stderr
error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/object-safety-mentions-Self.rs:17:1
   |
LL | fn make_bar<T:Bar>(t: &T) -> &dyn Bar {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Bar` cannot be made into an object
   |
   = note: method `bar` references the `Self` type in its arguments or return type

error[E0038]: the trait `Baz` cannot be made into an object
  --> $DIR/object-safety-mentions-Self.rs:22:1
   |
LL | fn make_baz<T:Baz>(t: &T) -> &dyn Baz {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Baz` cannot be made into an object
   |
   = note: method `bar` references the `Self` type in its arguments or return type

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0038`.
